--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.6.0/mammoth.browser.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js" defer></script>
-  <script src="update-notification.js?v=0.0.9" defer></script>
+  <script src="update-notification.js?v=0.0.10" defer></script>
   <script src="prompt-manager.js" defer></script>
   <script src="online-chat-manager.js" defer></script>
   <script src="online-chat-integration.js" defer></script>
@@ -2427,7 +2427,7 @@
         </div>
 
         <!-- 系统级通知 -->
-        <div class="settings-header">系统级通知 <span style="font-size: 12px; color: #999; margin-left: 10px;">v0.0.9</span></div>
+        <div class="settings-header">系统级通知 <span style="font-size: 12px; color: #999; margin-left: 10px;">v0.0.10</span></div>
         <div class="settings-section">
             <!-- 1. 主开关 -->
             <div class="settings-item">
@@ -4523,9 +4523,9 @@
             </div>
 
             <div class="settings-item">
-                 <label>字体大小 <span id="font-size-value" style="color:#888; font-size:12px;">13px</span></label>
+                 <label>字体大小 <span id="chat-font-size-value" style="color:#888; font-size:12px;">13px</span></label>
                  <div class="settings-right" style="width: 50%;">
-                    <input type="range" id="font-size-slider" min="12" max="20" step="1" style="width:100%;">
+                    <input type="range" id="chat-font-size-slider" min="12" max="20" step="1" style="width:100%;">
                  </div>
             </div>
             
