--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.6.0/mammoth.browser.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js" defer></script>
-  <script src="update-notification.js?v=0.0.12" defer></script>
+  <script src="update-notification.js?v=0.0.13" defer></script>
   <script src="prompt-manager.js" defer></script>
   <script src="online-chat-manager.js" defer></script>
   <script src="online-chat-integration.js" defer></script>
@@ -2427,7 +2427,7 @@
         </div>
 
         <!-- 系统级通知 -->
-        <div class="settings-header">系统级通知 <span style="font-size: 12px; color: #999; margin-left: 10px;">v0.0.12</span></div>
+        <div class="settings-header">系统级通知 <span style="font-size: 12px; color: #999; margin-left: 10px;">v0.0.13</span></div>
         <div class="settings-section">
             <!-- 1. 主开关 -->
             <div class="settings-item">
@@ -4231,6 +4231,18 @@
                             定时截取摄像头画面发送给AI，默认5秒
                         </div>
                         
+                        <!-- 使用后置摄像头开关 -->
+                        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 12px;">
+                            <label style="font-size: 13px;">使用后置摄像头</label>
+                            <label class="toggle-switch">
+                                <input type="checkbox" id="enable-rear-camera-switch">
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                        <div style="font-size: 11px; color: #999; margin-top: 5px;">
+                            开启后将切换为后置摄像头（仅移动设备有效）
+                        </div>
+
                         <!-- 摄像头状态 -->
                         <div id="camera-status" style="margin-top: 10px; padding: 8px; background: #f9f9f9; border-radius: 6px; font-size: 12px; display: none;">
                             <div style="display: flex; align-items: center; gap: 5px;">
@@ -4567,6 +4579,11 @@
                      ›
                      <input type="file" id="import-single-chat-input" accept="application/json" hidden>
                  </div>
+             </div>
+
+             <div class="settings-item clickable" id="export-character-full-btn">
+                 <label>导出角色</label>
+                 <div class="settings-right">›</div>
              </div>
 
              <div class="settings-item clickable" id="clear-chat-btn">
