--- a/index.html
+++ b/index.html
@@ -2907,6 +2907,19 @@
         <div class="nav-item" data-view="npc-list-view"> <span data-lang-key="navNpcList">NPC</span> </div>
       </div>
     </div>
+    
+    <!-- 数据分析统计界面 -->
+    <div id="data-distribution-screen" class="screen">
+      <div class="header">
+        <span class="back-btn" id="data-distribution-back-btn">‹</span>
+        <span>📊 数据分析统计</span>
+        <span class="action-btn" id="refresh-distribution-btn" title="刷新数据">🔄</span>
+      </div>
+      <div class="list-container" id="data-distribution-container" style="padding: 15px;">
+        <p style="text-align: center; padding: 40px 0; color: var(--text-secondary);">正在加载数据...</p>
+      </div>
+    </div>
+    
     <div id="album-screen" class="screen">
       <div class="header"> <span class="back-btn" id="album-back-btn">‹</span> <span>我的相册</span> <span class="action-btn" id="create-album-btn-page">+</span> </div>
       <div class="list-container">
