--- a/index.html
+++ b/index.html
@@ -1770,6 +1770,16 @@
                     <button id="open-console-btn" class="settings-mini-btn">打开控制台</button>
                 </div>
             </div>
+            <div class="settings-item">
+                <label>安全渲染模式</label>
+                <label class="toggle-switch">
+                    <input type="checkbox" id="safe-render-mode-switch">
+                    <span class="slider"></span>
+                </label>
+            </div>
+            <p class="settings-description" style="padding: 0 15px 10px; color: #888; font-size: 12px;">
+                若聊天列表显示空白，请开启此选项后刷新页面。开启后单个聊天项渲染失败不会影响其他项。
+            </p>
         </div>
 
         <!-- API 预设 -->
@@ -2747,6 +2757,7 @@
             
             <!-- 列表按钮：黑色左对齐 -->
             <button class="settings-full-btn" id="clear-chat-images-btn">清空聊天的本地图片</button>
+            <button class="settings-full-btn" id="clear-chat-html-btn">清空聊天的HTML内容</button>
             <button class="settings-full-btn" id="clear-api-history-btn">清空所有API历史记录</button>
             <button class="settings-full-btn" id="clear-stickers-btn">一键清空表情包</button>
             <button class="settings-full-btn" id="view-data-distribution-btn" data-lang-key="apiViewDataDistributionBtn">查看数据分布</button>
@@ -2871,6 +2882,35 @@
         <div class="modal-footer">
           <button class="cancel" id="cancel-clear-images-btn">取消</button>
           <button class="save btn-danger" id="confirm-clear-images-btn">确认清空</button>
+        </div>
+      </div>
+    </div>
+    <div id="clear-chat-html-modal" class="modal">
+      <div class="modal-content" style="height: 75%;">
+        <div class="modal-header">
+          <span>选择要清空HTML的聊天</span>
+          <label>
+            <input type="checkbox" id="select-all-chats-for-html-clear"> 全选
+          </label>
+        </div>
+        <div class="modal-body" style="padding: 10px;">
+          <div style="margin-bottom: 15px; padding: 10px; background: var(--bg-secondary); border-radius: 8px;">
+            <div style="font-weight: 500; margin-bottom: 8px;">清理模式：</div>
+            <label style="display: flex; align-items: center; margin-bottom: 8px; cursor: pointer;">
+              <input type="radio" name="html-clear-mode" value="strip" checked style="margin-right: 8px;">
+              <span>剥离HTML标签（保留纯文本内容）</span>
+            </label>
+            <label style="display: flex; align-items: center; cursor: pointer;">
+              <input type="radio" name="html-clear-mode" value="delete" style="margin-right: 8px;">
+              <span>直接删除含HTML的消息</span>
+            </label>
+          </div>
+          <div id="clear-chat-html-list" style="max-height: calc(100% - 100px); overflow-y: auto;">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="cancel" id="cancel-clear-html-btn">取消</button>
+          <button class="save btn-danger" id="confirm-clear-html-btn">确认清空</button>
         </div>
       </div>
     </div>
@@ -4697,10 +4737,34 @@
         <div class="settings-desc">AI每轮回复都会附带环境或心理描写 (灰色系统字)</div>
     </div>
     <label class="toggle-switch" style="margin: 0;"> 
-        <input type="checkbox" id="narrator-mode-toggle"> 
+        <input type="checkbox" id="narrator-mode-toggle">
+        <span class="slider"></span>
+    </label>
+</div>
+
+<!-- 双语模式设置 -->
+<div class="settings-item" id="bilingual-mode-group" style="display: flex; justify-content: space-between; align-items: center;">
+    <div style="flex: 1; padding-right: 10px;">
+        <label style="margin-bottom: 2px;">启用双语模式</label>
+        <div class="settings-desc">AI回复会同时包含外语和中文翻译，点击消息可切换显示</div>
+    </div>
+    <label class="toggle-switch" style="margin: 0;"> 
+        <input type="checkbox" id="bilingual-mode-toggle"> 
         <span class="slider"></span> 
     </label>
 </div>
+
+<!-- 双语模式显示位置设置 -->
+<div class="settings-item" id="bilingual-display-mode-group" style="display: none;">
+    <label>翻译显示位置</label>
+    <div class="settings-right">
+        <select id="bilingual-display-mode-select" class="settings-select" style="width: 100%; text-align: right;">
+            <option value="outside">气泡外部</option>
+            <option value="inside">气泡内部</option>
+        </select>
+    </div>
+</div>
+
 <div class="settings-item" id="todo-list-setting-group">
     <div style="flex: 1; padding-right: 10px;">
         <label style="margin-bottom: 2px;">启用待办事项同步</label>
