--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,10 @@
       </div>
       <div id="char-diary-detail-screen" class="char-screen">
         <div class="header"> <span class="back-btn" id="char-diary-detail-back-btn">‹ </span> <span id="char-diary-detail-title"></span>
-          <div class="header-actions"> <span class="action-btn" id="favorite-diary-btn" title="收藏"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <div class="header-actions"> <span class="action-btn" id="edit-diary-btn" title="编辑日记"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+              </svg> </span> <span class="action-btn" id="favorite-diary-btn" title="收藏"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
               </svg> </span> <span class="action-btn" id="copy-diary-content-btn" title="复制内容"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
